# jira-skill

./: .gitignore  BUILD_SUMMARY.md  DEVARMOR_MIGRATION.md  DEVARMOR_TEMPLATE_GUIDE.md  FINAL_GAPS_SUMMARY.md  GAPS_CLOSED.md  Makefile  PHASE2_SUMMARY.md  SKILL.md  jira  pyproject.toml  pytest.ini  requirements.txt  v2_RELEASE_NOTES.md
.claude/: SKILL.md
.git-hooks-local/: pre-commit
.github/workflows/: publish-private.yml  security.yml  test.yml  validate-versions.yml
config/: jira.default.json  schema.json
docs/: ARCHITECTURE.md  COMMANDS.md  CONFIG.md  EXAMPLES.md  README.md  SKILL_ARCHITECTURE.md
src/: __init__.py  api.py  auto_sizer.py  code_auditor.py  config.py  config_loader.py  guardrails.py  intelligence.py  jira_api.py  main.py  models.py  pr_linker.py  requirement_parser.py  skill.py  workflow_engine.py
tests/: __init__.py  test_auto_sizer.py  test_config_loader.py  test_devarmor_integration.py  test_guardrails.py  test_integration.py  test_pr_linker.py
