[project]
name = "jira-skill"
version = "2.0.0"
description = "Production-grade Jira Cloud management skill for Claude"
readme = "SKILL.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Claude Code", email = "claude@anthropic.com"}
]

dependencies = [
    "requests>=2.31.0",
    "jsonschema>=4.20.0",
]

[project.scripts]
jira = "src.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "typing-extensions>=4.8.0",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]  # Line length (black handles this)

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.setuptools]
packages = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
